2008-09-10  Ole André Vadla Ravnås  <ole.andre.ravnas@tandberg.com>

	* sys/winks/gstksvideodevice.c (GST_DEBUG_IS_ENABLED, last_timestamp,
	  gst_ks_video_device_prepare_buffers, gst_ks_video_device_create_pin,
	  gst_ks_video_device_set_state, gst_ks_video_device_request_frame,
	  gst_ks_video_device_read_frame):
	  Guard against capturing old frames by keeping track of the last
	  timestamp and also zero-fill the buffers before each capture.
	  Only assign a master clock if the pin hasn't already got one.
	  Actually free buffers on the way down to avoid a huge memory leak,
	  as this was previously done when changing state to ACQUIRE downwards
	  and we now skip that state on the way down.
	  Add some debug.
	* sys/winks/gstksvideosrc.c (DEFAULT_DEVICE_PATH, DEFAULT_DEVICE_NAME,
	  DEFAULT_DEVICE_INDEX, KS_WORKER_LOCK, KS_WORKER_UNLOCK,
	  KS_WORKER_WAIT, KS_WORKER_NOTIFY, KS_WORKER_WAIT_FOR_RESULT,
	  KS_WORKER_NOTIFY_RESULT, KS_WORKER_STATE_STARTING,
	  KS_WORKER_STATE_READY, KS_WORKER_STATE_STOPPING,
	  KS_WORKER_STATE_ERROR, KsWorkerState, device_path, device_name,
	  device_index, running, worker_thread, worker_lock,
	  worker_notify_cond, worker_result_cond, worker_state,
	  worker_pending_caps, worker_setcaps_result, worker_pending_run,
	  worker_run_result, gst_ks_video_src_reset,
	  gst_ks_video_src_apply_driver_quirks, gst_ks_video_src_open_device,
	  gst_ks_video_src_close_device, gst_ks_video_src_worker_func,
	  gst_ks_video_src_start_worker, gst_ks_video_src_stop_worker,
	  gst_ks_video_src_change_state, gst_ks_video_src_set_clock,
	  gst_ks_video_src_set_caps, gst_ks_video_src_timestamp_buffer,
	  gst_ks_video_src_create):
	  Remove ENABLE_CLOCK_DEBUG define, it's GST_LEVEL_DEBUG after all.
	  Get rid of PROP_ENSLAVE_KSCLOCK and always slave the ks clock to the
	  GStreamer clock, it doesn't seem to hurt and matches DirectShow's
	  behavior. As an added bonus we usually get PresentationTime set for